# dotfiles

./: .Xresources  .gitignore  .ideavimrc  .imwheelrc  .vimrc  .xinitrc  .xprofile  .zshrc  README.md
.config/: mimeapps.list
.config/Code - Insiders/User/: settings.json
.config/Code - OSS/User/: keybindings.json  settings.json
.config/alacritty/: alacritty.yml
.config/cmus/: autosave  command-history  lib.pl
.config/cmus/playlists/: TOOL
.config/nvim/: coc-settings.json  init.lua
.config/nvim/after/: main.vim
.config/nvim/lua/: cmp_config.lua  dial_config.lua  keymap.lua  lualine_config.lua  snippets.lua  telescope_config.lua
.config/nvim/plugin/: packer_compiled.lua
.config/nvim/snippets/snippets/: rust.json
.config/qtile/: config.py
.config/ranger/: commands.py  commands_full.py  rc.conf  rifle.conf
.config/sxhkd/: sxhkdrc
.config/zathura/: zathurarc
.zsh/: _cauwugo
data/linux/scripts/: arrows.sh  backblaze_backup.sh  backup.sh  bitmexWidget.py  clion_open_file.sh  cmus_update.sh  ctrl_m.sh  double_escape.sh  download.sh  dualMonitor.sh  extend.sh  flow.sh  gtm-plugin.sh  keyboardLayout.sh  main.sh  monitorLayout.sh  new_cargo_bin.sh  new_cargo_lib.sh  nvidia.conf  qtile_validator.py  screensaver-disabler.sh  screensaver.sh  screensaver.vimrc  screenshot-selector.sh  second.sh  singleMonitor.sh  surfingKeys.js  surfingkeys.js  sync_time.sh  test.sh  toggle_xscreensaver.sh  xmodmap
data/linux/scripts/ultisnips/: c.snippets  javascript.snippets
time_well_spent/: Cargo.toml
time_well_spent/src/: main.rs
