[package]
name = "time_well_spent"
version = "0.1.0"
authors = ["Stock84-dev <leontk8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
csv = "1.1.5"
serde = { version = "1.0.118", features = ["derive"] }
anyhow = "1.0.35"
chrono = "0.4.19"